--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Version Bump and Merge
+name: Merge Feature Branch into Main
 
 on:
   push:
@@ -7,72 +7,7 @@ on:
       - 'main'
 
 jobs:
-  version-bump:
-    if: github.ref != 'refs/heads/main'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout feature branch
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.ref }}
-          fetch-depth: 0  # Fetch all history for the refs
-
-      - name: Determine version increment
-        id: determine_increment
-        run: |
-          commit_message=$(git log -1 --pretty=%B)
-          if [[ $commit_message == *"[major]"* ]]; then
-            echo "major" > version_increment.txt
-          elif [[ $commit_message == *"[minor]"* ]]; then
-            echo "minor" > version_increment.txt
-          else
-            echo "patch" > version_increment.txt
-          fi
-          cat version_increment.txt
-
-      - name: Increment version
-        id: increment_version
-        run: |
-          # Extract the current version from pyproject.toml
-          version=$(grep -m1 version pyproject.toml | cut -d '"' -f2)
-          # Split the version number into components
-          IFS='.' read -ra ver <<< "$version"
-          major=${ver[0]}
-          minor=${ver[1]}
-          patch=${ver[2]}
-          # Read the version increment type
-          increment_type=$(cat version_increment.txt)
-          # Increment the appropriate version component
-          if [[ "$increment_type" == "major" ]]; then
-            major=$((major + 1))
-            minor=0
-            patch=0
-          elif [[ "$increment_type" == "minor" ]]; then
-            minor=$((minor + 1))
-            patch=0
-          else
-            patch=$((patch + 1))
-          fi
-          # Form the new version number
-          new_version="$major.$minor.$patch"
-          # Update the pyproject.toml file with the new version
-          sed -i "s/version = \"$version\"/version = \"$new_version\"/" pyproject.toml
-          echo "New version: $new_version"
-          # Set the new version as an output variable
-          echo "::set-output name=version::$new_version"
-
-      - name: Commit version bump
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add pyproject.toml
-          git commit -m "Bump version to ${{ steps.increment_version.outputs.version }}"
-          git push origin HEAD:${{ github.ref }}
-
   merge-to-main:
-    needs: version-bump
     if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
