--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,30 +4,37 @@ on:
   push:
     branches:
       - 'feature/**'
-      - 'main'
 
 jobs:
-  merge-to-main:
-    if: github.ref != 'refs/heads/main'
+  main:
+    name: Create PR Feature to Main
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout main branch
+      - name: Checkout code
         uses: actions/checkout@v3
         with:
-          ref: 'main'
-          fetch-depth: 0  # Fetch all history for the refs
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
-      - name: Fetch feature branch
-        run: git fetch origin ${{ github.head_ref }}:${{ github.head_ref }}
+      - name: Extract branch name
+        id: extract_branch
+        run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
-      - name: Merge feature branch into main
-        run: |
-          git checkout main
-          git merge ${{ github.head_ref }} --no-ff -m "Merge ${{ github.head_ref }} into main"
+      - name: Create pull request
+        id: open-pr
+        uses: repo-sync/pull-request@v2
+        with:
+          github_token: ${{ secrets.GH_PAT }}
+          source_branch: ${{ env.branch_name }}
+          destination_branch: ${{ github.event.repository.default_branch }}
+          pr_title: "[Automated] Merge ${{ env.branch_name }} into ${{ github.event.repository.default_branch }}"
+          pr_body: "Automated Pull Request"
+          pr_reviewer: "ghautomation"
+          pr_assignee: "ghautomation"
 
-      - name: Push changes
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
-          git push origin main
+      - name: Enable automerge
+        if: steps.open-pr.outputs.pr_number != ''
+        uses: peter-evans/enable-pull-request-automerge@v2
+        with:
+          token: ${{ secrets.GH_PAT }}
+          pull-request-number: ${{ steps.open-pr.outputs.pr_number }}
+          merge-method: merge
