--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,26 @@
-name: Merge Feature Branch into Main
+name: Auto-merge feature to main
 
 on:
   push:
     branches:
-      - 'feature/**'
+      - 'feature/**'  # Trigger on push to any feature branch
 
 jobs:
-  main:
-    name: Create PR Feature to Main
+  auto-merge:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
         with:
-          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          fetch-depth: 0  # Fetch all history for all branches and tags
 
-      - name: Extract branch name
-        id: extract_branch
-        run: echo "branch_name=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+      - name: Configure Git
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
 
-      - name: Create pull request
-        id: open-pr
-        uses: repo-sync/pull-request@v2
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          source_branch: ${{ env.branch_name }}
-          destination_branch: ${{ github.event.repository.default_branch }}
-          pr_title: "[Automated] Merge ${{ env.branch_name }} into ${{ github.event.repository.default_branch }}"
-          pr_body: "Automated Pull Request"
-          pr_reviewer: "ghautomation"
-          pr_assignee: "ghautomation"
-
-      - name: Enable automerge
-        if: steps.open-pr.outputs.pr_number != ''
-        uses: peter-evans/enable-pull-request-automerge@v2
-        with:
-          token: ${{ secrets.GH_PAT }}
-          pull-request-number: ${{ steps.open-pr.outputs.pr_number }}
-          merge-method: merge
+      - name: Merge feature branch to main
+        run: |
+          git checkout main
+          git merge --no-ff ${{ github.ref }}
+          git push origin main
