--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -79,3 +79,19 @@ jobs:
           echo "Job status: ${{ job.status }}"
           echo "Event name: ${{ github.event_name }}"
           echo "Ref: ${{ github.ref }}"
+            - name: Checkout genie-chart repository
+        uses: actions/checkout@v3
+        with:
+          repository: your-org/genie-chart
+          path: genie-chart
+          token: ${{ secrets.GENIE_CHART_PAT }}
+
+      - name: Update genie-chart values
+        run: |
+          cd genie-chart/genie-chart
+          sed -i 's/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add values.yaml
+          git commit -m "Update image tag to ${{ steps.get_version.outputs.tag }}"
+          git push
