--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -90,7 +90,8 @@ jobs:
       - name: Update genie-chart values
         run: |
           cd genie-chart/genie-chart/genie-chart
-          sed -i 's/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
+          #sed -i 's/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
+          sed -i '0,/tag: .*/s/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add values.yaml
