--- a/Dockerfile.data
+++ b/Dockerfile.data
@@ -13,5 +13,6 @@ COPY requirements.txt .
 RUN apt-get update && \
     apt-get install -y git libpq-dev gcc build-essential && \
     rm -rf /var/lib/apt/lists/*
-RUN pip install psycopg2-binary && pip install --no-cache-dir -r requirements.txt
+RUN pip install uv
+RUN uv sync
 CMD ["sh", "-c", "python /app/${SERVICE_NAME}.py"]
