--- a/Dockerfile.data
+++ b/Dockerfile.data
@@ -10,7 +10,7 @@ COPY common ./common
 COPY ai ./ai
 COPY start_consumers.py . 
 COPY pyproject.toml.txt .
-COPY uv.lock
+COPY uv.lock .
 RUN apt-get update && \
     apt-get install -y git libpq-dev gcc build-essential && \
     rm -rf /var/lib/apt/lists/*
