--- a/Dockerfile.data
+++ b/Dockerfile.data
@@ -12,7 +12,7 @@ COPY start_consumers.py .
 COPY pyproject.toml .
 COPY uv.lock .
 RUN apt-get update && \
-    apt-get install -y git build-essential && \
+    apt-get install -y git libpq-dev gcc build-essential && \
     rm -rf /var/lib/apt/lists/*
 RUN pip install uv
 RUN uv sync
