--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "altair==5.3.0",
     "apify-client==1.7.1",
     "apify-shared==1.1.2",
+    "authlib>=1.3.2",
     "azure-core==1.30.1",
     "azure-eventhub-checkpointstoreblob-aio==1.1.4",
     "azure-eventhub==5.12.0",
@@ -33,6 +34,7 @@ dependencies = [
     "httpx==0.27.0",
     "iniconfig==2.0.0",
     "itsdangerous==2.2.0",
+    "joserfc>=1.0.0",
     "jsonschema-specifications==2023.12.1",
     "jsonschema==4.23.0",
     "langchain-core==0.2.1",
