--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,78 +5,152 @@ description = "Genie AI"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+
     "aiohttp~=3.9.5",
+
     "alembic==1.13.2",
+
     "altair==5.3.0",
+
     "apify-client==1.7.1",
+
     "apify-shared==1.1.2",
+
     "authlib>=1.3.2",
+
     "azure-core==1.30.1",
+
     "azure-eventhub-checkpointstoreblob-aio==1.1.4",
+
     "azure-eventhub==5.12.0",
+
     "azure-monitor-opentelemetry==1.6.1",
+
     "beautifulsoup4==4.12.3",
+
     "fastapi-cli==0.0.4",
+
     "fastapi-cors==0.0.6",
+
     "fastapi==0.111.0",
+
     "gitdb==4.0.11",
+
     "gitpython==3.1.43",
+
     "google-api-core==2.19.0",
+
     "google-api-python-client==2.127.0",
+
     "google-auth-httplib2==0.2.0",
+
     "google-auth-oauthlib==1.2.0",
+
     "google-auth==2.28.1",
+
     "google-oauth==1.0.1",
+
     "googleapis-common-protos==1.63.1",
+
     "httpcore==1.0.5",
+
     "httplib2==0.22.0",
+
     "httptools==0.6.1",
+
     "httpx==0.27.0",
+
     "iniconfig==2.0.0",
+
     "itsdangerous==2.2.0",
+
     "joserfc>=1.0.0",
+
     "jsonschema-specifications==2023.12.1",
+
     "jsonschema==4.23.0",
+
     "langchain-core==0.2.1",
+
     "langchain-openai==0.1.7",
+
     "langchain-text-splitters==0.2.0",
+
     "langchain==0.2.1",
+
     "langchainhub==0.1.16",
+
     "langsmith==0.1.63",
+
     "launchpadlib==1.10.13",
+
     "linkedin-profile-picture",
+
     "loguru==0.7.2",
+
     "oauth2client==4.1.3",
+
     "oauthlib==3.2.2",
+
     "openai==1.30.4",
+
     "pandas==2.2.2",
+
     "peopledatalabs==3.1.0",
+
     "pluggy==1.5.0",
+
     "pre-commit==3.7.1",
+
     "psycopg2-binary==2.9.9",
+
     "psycopg2==2.9.9",
+
     "pycparser==2.22",
+
     "pydantic-core==2.18.4",
+
     "pydantic==2.7.4",
+
     "pytest-asyncio==0.23.8",
+
     "pytest-mock==3.14.0",
+
     "pytest==8.3.2",
+
     "python-dotenv==1.0.1",
+
     "requests-file==2.0.0",
+
     "requests-oauthlib==1.4.0",
+
     "requests-toolbelt==1.0.0",
+
     "requests-unixsocket==0.2.0",
+
     "requests==2.32.3",
+
     "setuptools==69.5.1",
+
     "simple-salesforce==1.12.5",
+
     "simplejson==3.16.0",
+
     "slack-sdk==3.31.0",
+
     "starlette-context==0.3.6",
+
     "starlette==0.37.2",
+
     "streamlit==1.37.1",
+
     "tavily-python==0.3.9",
+
     "urllib3==2.2.2",
+
     "uvicorn==0.29.0",
+
+    "yfinance>=0.2.43",
 ]
 
 [tool.black]
