--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "azure-eventhub-checkpointstoreblob-aio==1.1.4",
     "azure-eventhub==5.12.0",
     "azure-monitor-opentelemetry==1.6.1",
+    "azure-storage-blob>=12.23.0",
     "beautifulsoup4==4.12.3",
     "fastapi-cli==0.0.4",
     "fastapi-cors==0.0.6",
@@ -51,6 +52,8 @@ dependencies = [
     "openai==1.30.4",
     "pandas==2.2.2",
     "peopledatalabs==3.1.0",
+    "pinecone-client>=5.0.1",
+    "pinecone>=5.3.0",
     "pluggy==1.5.0",
     "pre-commit==3.7.1",
     "psycopg2-binary==2.9.9",
@@ -58,10 +61,13 @@ dependencies = [
     "pycparser==2.22",
     "pydantic-core==2.18.4",
     "pydantic==2.7.4",
+    "pymupdf>=1.24.10",
     "pytest-asyncio==0.23.8",
     "pytest-mock==3.14.0",
     "pytest==8.3.2",
+    "python-docx>=1.1.2",
     "python-dotenv==1.0.1",
+    "python-pptx>=1.0.2",
     "requests-file==2.0.0",
     "requests-oauthlib==1.4.0",
     "requests-toolbelt==1.0.0",
@@ -75,6 +81,8 @@ dependencies = [
     "starlette==0.37.2",
     "streamlit==1.37.1",
     "tavily-python==0.3.9",
+    "torch>=2.4.1",
+    "transformers>=4.44.2",
     "urllib3==2.2.2",
     "uvicorn==0.29.0",
 ]
