--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "apify-client==1.7.1",
     "apify-shared==1.1.2",
     "authlib>=1.3.2",
+    "azure-ai-inference>=1.0.0b4",
     "azure-core==1.30.1",
     "azure-eventhub-checkpointstoreblob-aio==1.1.4",
     "azure-eventhub==5.12.0",
@@ -81,8 +82,6 @@ dependencies = [
     "starlette==0.37.2",
     "streamlit==1.37.1",
     "tavily-python==0.3.9",
-    "torch>=2.4.1",
-    "transformers>=4.44.2",
     "urllib3==2.2.2",
     "uvicorn==0.29.0",
 ]
