--- a/Dockerfile.data
+++ b/Dockerfile.data
@@ -14,6 +14,9 @@ COPY uv.lock .
 RUN apt-get update && \
     apt-get install -y git libpq-dev gcc build-essential && \
     rm -rf /var/lib/apt/lists/*
+RUN if [ "$SERVICE_NAME" = "sales_material_consumer" ]; then \
+    apt-get install -y tesseract-ocr; \
+    fi
 RUN pip install uv
 RUN uv sync
 ENV PYTHONPATH=/app/.venv/lib/python3.12/site-packages
