--- a/Dockerfile.data
+++ b/Dockerfile.data
@@ -15,9 +15,11 @@ RUN apt-get update && \
     apt-get install -y git libpq-dev gcc build-essential && \
     rm -rf /var/lib/apt/lists/*
 RUN if [ "$SERVICE_NAME" = "sales_material_consumer" ]; then \
-    apt-get install -y software-properties-common && add-apt-repository universe && apt-get update && \
+    echo "deb http://deb.debian.org/debian/ bookworm main universe" > /etc/apt/sources.list && \
+    apt-get update && \
     apt-get install -y tesseract-ocr; \
     fi
+
 RUN pip install uv
 RUN uv sync
 ENV PYTHONPATH=/app/.venv/lib/python3.12/site-packages
