--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -24,18 +24,24 @@ jobs:
           echo "GitHub Workspace: ${{ github.workspace }}"
 
       - name: Checkout the code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        continue-on-error: true
+        uses: actions/checkout@v4.2.2
 
       - name: Login to Azure Container Registry
-        uses: azure/docker-login@v1
+        uses: azure/docker-login@v2
         with:
           login-server: ${{ secrets.ACR_LOGIN_SERVER }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
+
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.7.1
+        with:
+            driver: docker-container
+            driver-opts: |
+              image=moby/buildkit:latest
+        continue-on-error: true
+        
 
       - name: Get version from pyproject.toml
         id: get_version
@@ -52,23 +58,43 @@ jobs:
             echo "tag=$fallback_tag" >> $GITHUB_OUTPUT
           fi
 
+     - name: Build temp cache image
+        uses: docker/build-push-action@v6.9.0
+        with:
+          context: .
+          file: Dockerfile.temp
+          tags: temp-cache-image:latest
+          load: true
+          cache-from: type=gha,scope=temp-dockerfile-cache
+          cache-to: type=gha,mode=max,scope=temp-dockerfile-cache
+          
       - name: Build and push start_api
-        run: |
-          docker build -f Dockerfile.root -t ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.tag }} . || exit 1
-          docker push ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.tag }} || exit 1
-        continue-on-error: true
+        uses: docker/build-push-action@v6.9.0
+        with:
+          context: .
+          file: Dockerfile.root
+          tags: ${{ secrets.ACR_LOGIN_SERVER }}/start_api:${{ steps.get_version.outputs.tag }}
+          load: true
+          cache-from: type=gha,scope=start-api-cache
+          cache-to: type=gha,mode=max,scope=start-api-cache
+          push: true
+         
 
+      
       - name: Build and push data services
         run: |
           services=("meetings_consumer" "pdl_consumer" "person_langsmith" "persons_manager" "slack_consumer" "apollo_consumer" "company_consumer" "sales_material_consumer" "emails_manager" "tasks_manager")
           for service in "${services[@]}"
           do
             if docker build -f Dockerfile.data --build-arg SERVICE_NAME=$service -t ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.tag }} .; then
-              docker push ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.tag }} || echo "Failed to push $service"
+                docker push ${{ secrets.ACR_LOGIN_SERVER }}/$service:${{ steps.get_version.outputs.tag }} || echo "Failed to push $service"
+            echo "done"
             else
               echo "Failed to build $service"
             fi
           done
+
+
 
       - name: Print job status
         if: always()
