--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -79,7 +79,17 @@ jobs:
           cache-from: type=gha,scope=start-api-cache
           cache-to: type=gha,mode=max,scope=start-api-cache
           push: true
-         
+
+      - name: Build and push DBUpdater
+        uses: docker/build-push-action@v6.9.0
+        with:
+          context: .
+          file: Dockerfile.dbupdater
+          tags: ${{ secrets.ACR_LOGIN_SERVER }}/db_updater:${{ steps.get_version.outputs.tag }}
+          load: true
+          cache-from: type=gha,scope=start-api-cache
+          cache-to: type=gha,mode=max,scope=start-api-cache
+          push: true    
 
       
       - name: Build and push data services
