--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -80,15 +80,10 @@ jobs:
           push: true
 
       - name: Build and push DBUpdater
-        uses: docker/build-push-action@v6.9.0
-        with:
-          context: .
-          file: Dockerfile.dbupdater
-          tags: ${{ secrets.ACR_LOGIN_SERVER }}/db_updater:${{ steps.get_version.outputs.tag }}
-          push: true
-          cache-from: type=gha,scope=dbupdater-cache
-          cache-to: type=gha,mode=max,scope=dbupdater-cache
-      
+        run: |
+          docker build -t ${{ secrets.ACR_LOGIN_SERVER }}/db_updater:${{ steps.get_version.outputs.tag }} -f Dockerfile.dbupdater .
+          docker push ${{ secrets.ACR_LOGIN_SERVER }}/db_updater:${{ steps.get_version.outputs.tag }}
+
       - name: Build and push data services
         run: |
           services=("meetings_consumer" "pdl_consumer" "person_langsmith" "persons_manager" "slack_consumer" "apollo_consumer" "company_consumer" "sales_material_consumer" "emails_manager" "tasks_manager")
