--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -117,7 +117,10 @@ jobs:
         run: |
           cd genie-chart/genie-chart/genie-chart
           #sed -i 's/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
-          sed -i '0,/tag: .*/s/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
+          #sed -i '0,/tag: .*/s/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' values.yaml
+          sed -i -e '0,/tag: .*/s/tag: .*/tag: ${{ steps.get_version.outputs.tag }}/' \
+          -e 's|db_updater:.*|db_updater:${{ steps.get_version.outputs.tag }}|' \
+          values.yaml
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add values.yaml
